# xberg-txtai

./: .pre-commit-config.yaml  README.md  poly.toml  pyproject.toml
.ai-rulez/: .generated-manifest.json  config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yaml  validate-issues.yml  validate-pr.yml
