[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "kreuzberg-txtai"
version = "0.1.0"
description = "Kreuzberg document extraction pipeline for txtai and other callable-based frameworks"
readme = "README.md"
keywords = [
  "ai",
  "document-extraction",
  "document-intelligence",
  "embeddings",
  "kreuzberg",
  "llm",
  "nlp",
  "ocr",
  "pdf",
  "rag",
  "text-extraction",
  "txtai",
]
license = "MIT"
maintainers = [
  { name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" },
  { name = "Varun Tandon", email = "varun@kreuzberg.dev" },
]
authors = [ { name = "Kreuzberg.dev", email = "contact@kreuzberg.dev" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
  "Topic :: Text Processing :: Indexing",
  "Typing :: Typed",
]
dependencies = [
  "kreuzberg>=4.8",
]
optional-dependencies.txtai = [ "txtai>=9.7" ]
urls.Changelog = "https://github.com/xberg-io/kreuzberg-txtai/blob/main/CHANGELOG.md"
urls.Documentation = "https://docs.kreuzberg.dev"
urls.Homepage = "https://github.com/xberg-io/kreuzberg-txtai"
urls.Issues = "https://github.com/xberg-io/kreuzberg-txtai/issues"
urls.Kreuzberg = "https://github.com/xberg-io/kreuzberg"
urls.Repository = "https://github.com/xberg-io/kreuzberg-txtai"

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pre-commit>=4.5.1",
  "pytest>=9",
  "pytest-cov>=7.1",
  "ruff>=0.15.10",
]

[tool.hatch]
build.targets.sdist.include = [
  "src/kreuzberg_txtai",
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]
build.targets.wheel.packages = [ "src/kreuzberg_txtai" ]

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",
  "COM812",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
  "PLR0913",
]
lint.per-file-ignores."tests/**" = [
  "ANN",
  "D",
  "PERF401",
  "PERF402",
  "PLC0415",
  "PLR2004",
  "S101",
  "S105",
  "S106",
  "S108",
  "SLF001",
  "TC001",
  "TC003",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "slow: marks tests that hit the OCR path or other slow Kreuzberg backends",
]

[tool.coverage]
run.source = [ "kreuzberg_txtai" ]
report.fail_under = 80
